--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "lint": "eslint js --ext .js,.jsx"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "react": "15.4.2",
     "react-native": "0.40.0",
     "react-redux": "^5.0.2",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-logger": "^2.7.4",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
