--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-redux": "^5.0.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "react-native-motion-manager": "0.0.6",
+    "react-native-sensor-manager": "^0.1.10"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
